Enhance JWT generation endpoint and update API documentation
- Changed the `/generate-jwt` endpoint from GET to POST to improve security and align with RESTful practices.
- Implemented rate limiting on the JWT generation endpoint, allowing a maximum of 5 requests per minute per IP.
- Updated InfoHandler in handlers/info.go to reflect the new request method, rate limiting details, and request body structure for generating JWT tokens.
- Enhanced README.md to provide updated examples for generating JWT tokens, including the new POST request format and rate limiting information.
- Added support for blacklisted users in the configuration, allowing for enhanced security by blocking specific user IDs.
- Introduced a new RateLimiter middleware to manage request limits effectively.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ POSTGRES_URL=postgres://user:password@localhost:5432/dbname?sslmode=disable
 
 # URL для подключения к Redis
 REDIS_URL=redis://localhost:6379
+
+BLACKLISTED_USERS=user1,user2,user3
