Update .env.example to enhance configuration options
- Modified the REDIS_URL to specify the Redis database index.
- Added ALLOWED_ORIGINS variable to support CORS configuration, improving cross-origin request handling.
- Ensured consistent formatting by adding a newline at the end of the file.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ SECRET_KEY=your-secret-key-here
 POSTGRES_URL=postgres://user:password@localhost:5432/dbname?sslmode=disable
 
 # URL для подключения к Redis
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379/0
 
 BLACKLISTED_USERS=user1,user2,user3
+
+ALLOWED_ORIGINS=*
